# shannon

./: .codegraph  .conform.yaml  .env.example  .env.secrets.example  .gitignore  .gitmodules  .ignore  .rumdl.toml  .taplo.toml  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  _typos.toml  bacon.toml  clippy.toml  deny.toml  dprint.json  justfile  lefthook.yml  rust-toolchain.toml
.cargo/: config.toml
.claude/memory/: MEMORY.md  codegraph-symlink-tracked.md
.devcontainer/: devcontainer.json  docker-compose.yml  post-create.sh  post-start.sh
.zed/: settings.json
docs/findings/: sentinel.md
src/: lib.rs  main.rs
src/sentinel/: mod.rs  tests.rs
